--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,6 +53,7 @@ export(getRid)
 export(id0)
 export(init.tr)
 export(loadsoft)
+export(linux.softp)
 export(met.biplot)
 export(met.corr)
 export(met.plot)
