--- a/NAMESPACE
+++ b/NAMESPACE
@@ -81,6 +81,7 @@ export(run.mod)
 export(sig.level)
 export(siglevel)
 export(spd.plot)
+export(subF1)
 export(summary)
 export(summary.esR)
 export(trace)
